Change word_mapping name

--- a/app/views/bots/_layout.html.slim
+++ b/app/views/bots/_layout.html.slim
@@ -70,7 +70,7 @@
             = active_link_to bot_word_mappings_path(@bot), class: 'dropdown-item', data: { event: 'synonym' } do
               = material_icon 'book', class: 'text-gray-light mi-sm'
               = space
-              span 同義語
+              span 辞書
             = active_link_to new_bot_chat_test_path(@bot), class: 'dropdown-item', data: { event: 'bot test' } do
               = material_icon 'done_all', class: 'text-gray-light mi-sm'
               = space
