--- a/app/views/topic_tags/_form.html.slim
+++ b/app/views/topic_tags/_form.html.slim
@@ -1,6 +1,6 @@
 .row
   .col-md-6.col-xs-12
-    = bootstrap_form_for [@bot, @topic_tag] do |f|
+    = form_for [@bot, @topic_tag] do |f|
 
       = f.text_field :name, hide_label: true
 
