--- a/lib/templates/erb/scaffold/_form.html.erb
+++ b/lib/templates/erb/scaffold/_form.html.erb
@@ -1,4 +1,4 @@
-<%%= bootstrap_form_for(@<%= singular_table_name %>) do |f| %>
+<%%= form_for(@<%= singular_table_name %>) do |f| %>
   <%%= render "shared/errors", object: @<%= singular_table_name %> %>
 
 <% attributes.each do |attribute| -%>
