--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -43,7 +43,7 @@
                   = space 2
                   span 回答不可
                 - else
-                  i.fa.fa-thumbs-down.text-danger
+                  = material_icon 'thumb_down', class: 'mi-sm text-danger'
                   = space 2
                   span Bad評価
                   br
