Remove root password for development and staging

--- a/ansible/roles/app/templates/.env.j2
+++ b/ansible/roles/app/templates/.env.j2
@@ -1,7 +1,8 @@
 SECRET_KEY_BASE={{ secrets.secret_key_base }}
 
 DB_HOST={{ db_host }}
-DB_PASSWORD={{ secrets.db_password }}
+DB_USERNAME={{ db_username }}
+DB_PASSWORD={{ db_password }}
 
 SLACK_API_TOKEN={{ secrets.slack_api_token }}
 SLACK_WEBHOOK_URL={{ secrets.slack_webhook_url}}
