--- a/ansible/roles/app/templates/database.yml.j2
+++ b/ansible/roles/app/templates/database.yml.j2
@@ -4,5 +4,5 @@
   pool: 5
   host: <%= ENV['DB_HOST'] %>
   database: myope
-  username: myope
+  username: <%= ENV['DB_USERNAME'] %>
   password: <%= ENV['DB_PASSWORD'] %>
