--- a/ansible/roles/app/templates/initd_rails.j2
+++ b/ansible/roles/app/templates/initd_rails.j2
@@ -9,7 +9,7 @@ ENV={{ stage }}
 ROOT_DIR="/var/www/donusagi-bot/current"
 
 GEMFILE="${ROOT_DIR}/Gemfile"
-PID="${ROOT_DIR}/tmp/pids/unicorn.pid"
+PID="/tmp/unicorn.pid"
 CONF="${ROOT_DIR}/config/unicorn.rb"
 OPTIONS=""
 
@@ -21,7 +21,7 @@ start()
   fi
   echo "start $NAME"
   cd $ROOT_DIR
-  su - ec2-user -c "cd ${ROOT_RIR} && BUNDLE_GEMFILE=${GEMFILE} bundle exec unicorn -c ${CONF} -E ${ENV} -D ${OPTIONS}"
+  su - deploy -c "cd ${ROOT_RIR} && BUNDLE_GEMFILE=${GEMFILE} bundle exec unicorn -c ${CONF} -E ${ENV} -D ${OPTIONS}"
 }
 
 stop()
