--- a/ansible/roles/app/templates/.env.j2
+++ b/ansible/roles/app/templates/.env.j2
@@ -22,3 +22,6 @@ ROLLBAR_TOKEN_SERVER={{ rollbar_token_server }}
 ROLLBAR_TOKEN_CLIENT={{ rollbar_token_client }}
 
 RPC_HOST=127.0.0.1
+
+BASIC_AUTH_USER={{ basic_auth_user }}
+BASIC_AUTH_PASS={{ basic_auth_pass }}
