--- a/ansible/roles/app/templates/slappy.conf.j2
+++ b/ansible/roles/app/templates/slappy.conf.j2
@@ -4,7 +4,7 @@ start on runlevel [2345]
 stop on runlevel [016]
 
 chdir /var/www/donusagi-bot/current/slack-bot
-env RAILS_ENV=production
+env RAILS_ENV={{ stage }}
 
 script
   exec /usr/local/rbenv/shims/bundle exec slappy start
