--- a/app/views/messages/_decision_branches.html.slim
+++ b/app/views/messages/_decision_branches.html.slim
@@ -1,4 +1,6 @@
 .row.my-4: .col-6.offset-3
-  .chat-decision-branches: .chat-decision-branches__container: .chat-decision-branches__items
-    - items.each do |item|
-      span.chat-decision-branches__item= item.body
+  .chat-decision-branches: .chat-decision-branches__container
+    .chat-decision-branches__title= title
+    .chat-decision-branches__items
+      - items.each do |item|
+        span.chat-decision-branches__item= item.body
