Modify logo to without 'office'

--- a/app/assets/stylesheets/app/modules/navbar.scss
+++ b/app/assets/stylesheets/app/modules/navbar.scss
@@ -13,9 +13,9 @@
 
     a {
       display: block;
-      width: 130px;
+      width: 80px;
       background: {
-        image: image-url('logo--orange.svg');
+        image: image-url('logo--orange--no-office.svg');
         position: center center;
         size: contain;
         repeat: no-repeat;
