Restrict threads count if logged in as ec plan user

--- a/app/views/threads/index.html.slim
+++ b/app/views/threads/index.html.slim
@@ -46,10 +46,18 @@
       = space
       span CSVエクスポート
 
+  - ec_alert = capture do
+    - if current_user.ec_plan?
+      .alert.alert-warning.mb-1 ※ #{current_user.plan.capitalize}プランでは#{current_user.histories_limit_days}日前までの履歴が表示されます
   - pagination = capture do
     = render 'shared/pagination', resources: @chats, per_page: @per_page
 
-  = pagination
-  - @chats.each do |chat|
-    = render 'threads/summary', bot: @bot, chat: chat
-  = pagination
+  - if @chats.any?
+    = ec_alert
+    = pagination
+    - @chats.each do |chat|
+      = render 'threads/summary', bot: @bot, chat: chat
+    = pagination
+    = ec_alert
+  - else
+    .alert.alert-info.mb-1 対話履歴が見つかりませんでした
