Change direct chat url

--- a/app/views/settings/pages/embed.html.slim
+++ b/app/views/settings/pages/embed.html.slim
@@ -39,7 +39,7 @@
       |チャット画面のURLをメールなどでシェアしていただいてもご利用が可能です。
       br
       |以下のURLをお使い下さい
-    input.form-control readonly=true value=new_chats_url(@bot.token) onclick="this.select()"
+    input.form-control readonly=true value=chats_url(@bot.token) onclick="this.select()"
 
 
   .modal.fade#chat-widget-desc tabindex="-1" role="dialog"
