--- a/app/assets/stylesheets/app/modules/chat/header.scss
+++ b/app/assets/stylesheets/app/modules/chat/header.scss
@@ -22,6 +22,12 @@
     bottom: 4px;
     right: 4px;
   }
+  &__left {
+    position: absolute;
+    top: 4px;
+    bottom: 4px;
+    left: 4px;
+  }
 
   &__button {
     padding: 6px 8px !important;
