--- a/app/views/messages/_bot_balloon.html.slim
+++ b/app/views/messages/_bot_balloon.html.slim
@@ -17,7 +17,7 @@
         small 回答不可
     .chat-message__rating
       .chat-message__rating-title この返答の評価
-      span.chat-message__rating-button.good class=('active' if message.good?)
+      span.chat-message__rating-button.good class=('active' if message.rating&.good?)
         = material_icon 'thumb_up'
-      span.chat-message__rating-button.bad class=('active' if message.bad?)
+      span.chat-message__rating-button.bad class=('active' if message.rating&.bad?)
         = material_icon 'thumb_down'
