Update importing description

--- a/app/views/imports/show.html.slim
+++ b/app/views/imports/show.html.slim
@@ -21,7 +21,7 @@
     span 波線
     = space 2
     code ー
-    span ハイフン
+    span 全角ハイフン
     = space 2
     code style="font-size:22px;" ①
     = space
