--- a/app/views/messages/_guest_balloon.html.slim
+++ b/app/views/messages/_guest_balloon.html.slim
@@ -1,3 +1,3 @@
 .chat-message--my.full-width
-  .chat-message__icon style=("background-image:url(#{image_path('silhouette.png')});")
+  /.chat-message__icon style=("background-image:url(#{image_path('silhouette.png')});")
   .chat-message__balloon= message.body
