--- a/app/views/messages/index.html.slim
+++ b/app/views/messages/index.html.slim
@@ -42,7 +42,7 @@
             = render 'messages/bot_balloon', bot: @bot, message: message, show_mark_button: true
           - if message.question_answer&.decision_branches&.any?
             = render 'messages/decision_branches', items: message.question_answer.decision_branches, title: '回答を選択してください'
-          - if message.similar_question_answers_log.present?
+          - if message.similar_question_answers_log.present? && message.is_show_similar_question_answers
             = render 'messages/decision_branches', items: message.similar_question_answers_log.map{ |it| Struct.new(:body).new(it['question']) }, title: 'こちらの質問ではないですか？'
 
   = pagination
