--- a/app/views/bots/show.html.slim
+++ b/app/views/bots/show.html.slim
@@ -1,4 +1,32 @@
 = render layout: 'bots/layout' do
+  - if current_user.staff?
+    .my-4
+      h6.mb-4
+        = material_icon 'trending_down', class: 'mi-sm mi-v-sub text-muted'
+        = space
+        span 削減効果予測
+
+      .row
+        .col-6
+          table.table
+            thead: tr
+              th 過去30日間にチャットを使用したユーザー数
+              th 削減予測時間
+            tbody: tr
+              td
+                span.h3 #{@recent_30days_users_count}
+                = space
+                span ユーザー
+              td
+                - if @reducted_hours > 0
+                  span.h3 #{@reducted_hours.to_s(:delimited)}
+                  = space
+                  span 時間
+                  = space
+                - if @reducted_minutes > 0
+                  span.h3 #{@reducted_minutes.to_s(:delimited)}
+                  = space
+                  span 分
 
   .my-4
     h6.mb-4
