Implement notification settings

--- a/app/views/layouts/shared/ui/_header.html.slim
+++ b/app/views/layouts/shared/ui/_header.html.slim
@@ -17,7 +17,7 @@ header
             = link_to current_user.email.split('@').first, '#', class: 'nav-link dropdown-toggle', id: 'navbarDropdownMenuLink', data: { toggle: "dropdown", event_name: 'Toggle account dropdown menu' }
             .dropdown-menu.dropdown-menu-right aria-labelledby="navbarDropdownMenuLink"
               = link_to 'ボット一覧', bots_path, class: 'dropdown-item', data: { event: 'return my-ope home' }
-              = link_to 'ユーザー情報変更', edit_user_registration_path, class: 'dropdown-item', data: { event: 'user account' }
+              = link_to 'ユーザー情報変更', '/my', class: 'dropdown-item', data: { event: 'user account' }
 
               .dropdown-divider
 
