--- a/app/views/my/notifications/edit.html.slim
+++ b/app/views/my/notifications/edit.html.slim
@@ -5,7 +5,7 @@
         = f.check_box :email_notification, class: 'form-check-input'
         span メール通知
       .form-text.text-muted
-        |ボットが質問に回答できなかった場合、ボットの回答にBad評価がついた時にメールでお知らせする機能です
+        |ボットが質問に回答できなかった時と、ボットの回答にBad評価がついた時にメールでお知らせする機能です
 
     .form-group.text-right
       = f.submit '更新', class: 'btn btn-success'
