Resize bot message balloon to wide

--- a/app/assets/stylesheets/app/modules/chat/message.scss
+++ b/app/assets/stylesheets/app/modules/chat/message.scss
@@ -18,6 +18,12 @@
     @extend %base-chat-message;
     width: 100%;
   }
+
+  &.wide {
+    @include media-breakpoint-up(sm) {
+      width: 70%;
+    }
+  }
 }
 
 .chat-message {
