Update email body

--- a/app/views/organization_mailer/notify_before_1week_of_finishing_trial.text.slim
+++ b/app/views/organization_mailer/notify_before_1week_of_finishing_trial.text.slim
@@ -1,8 +1,8 @@
 こんにちは。いつもMy-opeをご利用いただきありがとうございます。
 
-さて、フリープランの終了日が1週間後に迫ってまいりましたのでご連絡差し上げました。
-期間が終了すると、管理機能はご利用いただけますが、
-チャット画面は中止状態へと変わり質問を受け付けられなくなりますのでご注意下さい。
+さて、ライトプランの無料試用期間の終了が1週間後に迫ってまいりましたのでご連絡差し上げました。
+試用期間が終了しますと、チャット画面が中止状態へと変わり質問を受け付けられなくなりますのでご注意下さい。
+なお、管理機能は引き続きご利用頂けます。
 
-プランのアップグレードをご希望の場合は以下のメールアドレスまでご連絡下さい。
+有料によるライトプランのご継続、またはスタンダードプラン、プロフェッショナルプランへのアップグレードをご希望の場合は、以下のメールアドレスまでご連絡下さい。
 support@mof-mof.co.jp
