Restrict organizations count that can be joined

--- a/app/views/admin/organizations/_form.html.slim
+++ b/app/views/admin/organizations/_form.html.slim
@@ -3,6 +3,11 @@
 - if alert
   .my-4.alert.alert-danger= alert
 
+- if @organization.errors.any?
+  ul.text-danger
+    - @organization.errors.full_messages.each do |message|
+      li= message
+
 = nested_form_for [:admin, @organization], html: { class: 'form my-5' } do |f|
   - if @organization.image?
     .form-group
