Change selected color of tree node

--- a/app/assets/stylesheets/app/modules/tree.scss
+++ b/app/assets/stylesheets/app/modules/tree.scss
@@ -54,7 +54,7 @@
         left: -99999px;
         right: -99999px;
         z-index: 0;
-        background-color: $gray-lighter;
+        background-color: #d8e2e6;
       }
     }
   }
