--- a/ansible/roles/app/templates/python-config.yml.j2
+++ b/ansible/roles/app/templates/python-config.yml.j2
@@ -1,7 +1,24 @@
 production:
+  datasource_type: database
   database:
     endpoint: mysql://{{ secrets.db_user }}:{{ secrets.db_password }}@{{ secrets.db_host }}/{{ secrets.db_name }}?charset=utf8
     host: {{ secrets.db_host }}
     name: {{ secrets.db_name }}
     user: {{ secrets.db_user }}
     password: {{ secrets.db_password }}
+  dicdir: /usr/lib64/mecab/dic/mecab-ipadic-neologd
+  word2vec_model_name: fasttext_model.vec
+  word2vec_model_is_binaly: False
+  # word2vec_model_name: entity_vector.model.bin
+  # word2vec_model_is_binaly: True
+# mysql:
+#     host: localhost
+#     user: root
+#     passwd: my secret password
+#     db: write-math
+# other:
+#     preprocessing_queue:
+#         - preprocessing.scale_and_center
+#         - preprocessing.dot_reduction
+#         - preprocessing.connect_lines
+#     use_anonymous: yes
